tests/compile-fail/tracked_fn_return_ref.stderr
error: a reference tied to the database lifetime does not implement `SalsaValue`; return an owned value instead
  --> tests/compile-fail/tracked_fn_return_ref.rs:15:67
   |
15 | fn tracked_fn_return_ref<'db>(db: &'db dyn Db, input: MyInput) -> &'db str {
   |                                                                   ^

error[E0106]: missing lifetime specifier
  --> tests/compile-fail/tracked_fn_return_ref.rs:33:6
   |
33 | ) -> ContainsRef {
   |      ^^^^^^^^^^^ expected named lifetime parameter
   |
help: consider using the `'db` lifetime
   |
33 | ) -> ContainsRef<'db> {
   |                 +++++

error[E0277]: the tracked function's return type `ContainsRef<'db>` does not implement `SalsaValue`
  --> tests/compile-fail/tracked_fn_return_ref.rs:23:6
   |
23 | ) -> ContainsRef<'db> {
   |      ^^^^^^^^^^^^^^^^ does not implement `SalsaValue`
   |
help: the trait `_::_assert_output_is_salsa_value::SalsaValue` is not implemented for `ContainsRef<'db>`
  --> tests/compile-fail/tracked_fn_return_ref.rs:10:1
   |
10 | struct ContainsRef<'db> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: consider deriving `salsa::SalsaValue` for the tracked function's return type if it is safe to retain across revisions
note: required by a bound in `_::_assert_output_is_salsa_value::assert_salsa_value`
  --> tests/compile-fail/tracked_fn_return_ref.rs:19:1
   |
19 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value`
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the tracked function's return type `ContainsRef<'db>` does not implement `SalsaValue`
  --> tests/compile-fail/tracked_fn_return_ref.rs:43:6
   |
43 | ) -> ContainsRef<'_> {
   |      ^^^^^^^^^^^^^^^ does not implement `SalsaValue`
   |
help: the trait `_::_assert_output_is_salsa_value::SalsaValue` is not implemented for `ContainsRef<'db>`
  --> tests/compile-fail/tracked_fn_return_ref.rs:10:1
   |
10 | struct ContainsRef<'db> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   = note: consider deriving `salsa::SalsaValue` for the tracked function's return type if it is safe to retain across revisions
note: required by a bound in `_::_assert_output_is_salsa_value::assert_salsa_value`
  --> tests/compile-fail/tracked_fn_return_ref.rs:39:1
   |
39 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value`
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
